--- a/public/login.html
+++ b/public/login.html
@@ -119,7 +119,7 @@
   <div class="container">
     <!-- Brand -->
     <div class="brand">
-      <h1>ModernStore</h1>
+      <h1>Iyke Store</h1>
       <p>Welcome back! Please login to continue</p>
     </div>
 
