--- a/public/register.html
+++ b/public/register.html
@@ -113,7 +113,7 @@
   <div class="container">
     <!-- Brand -->
     <div class="brand">
-      <h1>ModernStore</h1>
+      <h1>Iyke Store</h1>
       <p>Create your account to get started</p>
     </div>
 
